--- a/styles/report.scss
+++ b/styles/report.scss
@@ -81,6 +81,12 @@
   direction: ltr;
 }
 
+.report-no-data-message {
+  font-size: 1.5rem;
+  font-weight: bolder;
+  text-align: center;
+}
+
 
 @media (max-width: 768px) {
   .report-form-group {
