--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3822,6 +3822,12 @@ textarea.event-description-input {
 }
 
 .report-submit-button {
+  border-radius: 0.5rem;
+  margin-left: 1.25%;
+}
+
+.report-reset-button {
+  border-radius: 0.5rem;
   margin-left: 1.25%;
 }
 
@@ -3837,7 +3843,67 @@ textarea.event-description-input {
   text-align: center;
 }
 
+/* For WebKit browsers like Chrome and Safari */
+input::-webkit-input-placeholder {
+  color: #333;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  padding-left: 0.15rem;
+}
+
+/* For Mozilla Firefox */
+input::-moz-placeholder {
+  color: #333;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  padding-left: 0.15rem;
+}
+
+/* For Internet Explorer */
+input:-ms-input-placeholder {
+  color: #333;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  padding-left: 0.15rem;
+}
+
+/* For Microsoft Edge */
+input::-ms-input-placeholder {
+  color: #333;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  padding-left: 0.15rem;
+}
+
+/* Standard syntax */
+input::placeholder {
+  color: #333;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  padding-left: 0.15rem;
+}
+
+.report-optional-text {
+  color: grey;
+  font-size: 12px;
+  margin-top: -2rem;
+  margin-bottom: 3rem;
+  margin-left: 1.5rem;
+}
+
 @media (max-width: 768px) {
+  .report-optional-text {
+    color: grey;
+    font-size: 12px;
+    margin-top: -1.5rem;
+    margin-bottom: 2rem;
+    margin-left: 1.5rem;
+  }
   .report-form-group {
     padding: 0;
   }
@@ -3873,6 +3939,9 @@ textarea.event-description-input {
     font-size: 1.2rem;
   }
   .report-submit-button {
+    margin-left: 2.5%;
+  }
+  .report-reset-button {
     margin-left: 2.5%;
   }
 }
