--- a/styles/report.scss
+++ b/styles/report.scss
@@ -147,6 +147,11 @@ input::placeholder {
 }
 
 @media (max-width: 768px) {
+  input[type="date"] {
+    min-width: 550px;
+    -webkit-appearance: none;
+  }
+
   .report-optional-text {
     color: grey;
     font-size: 12px;
