--- a/styles/report.scss
+++ b/styles/report.scss
@@ -170,6 +170,7 @@ input::placeholder {
     margin-left: 0;
     margin-right: 0;
     width: 95%;
+    -webkit-appearance: none;
   }
 
   .input-row {
