--- a/styles/report.scss
+++ b/styles/report.scss
@@ -169,8 +169,9 @@ input::placeholder {
   .report-form-select {
     margin-left: 0;
     margin-right: 0;
-    width: 95%;
+    text-align: left;
     -webkit-appearance: none;
+    width: 95%;
   }
 
   .input-row {
@@ -204,6 +205,7 @@ input::placeholder {
   }
 
   .report-reset-button {
+    font-weight: bold;
     margin-left: 2.5%;
   }
 }
