--- a/styles/report.scss
+++ b/styles/report.scss
@@ -43,7 +43,8 @@
 
 .results-table th {
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: $litterpic-green;
+  color: white;
 }
 
 .report-td-weight {
