LITTERPIC-254 - Fix sporadic view of cached address

--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -245,6 +245,11 @@
   width: auto;
 }
 
+.recent-location-select {
+  font-size: .9rem;
+  width: 605px;
+}
+
 .create-post-content {
   display: flex;
   justify-content: center;
