--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -65,17 +65,18 @@
   display: flex;
   font-family: Rubik, Times, sans-serif;
   font-size: 16px;
-  height: 2rem;
+  height: auto;
   justify-content: center;
   margin-bottom: auto;
-  padding: 0 1rem;
+  padding: .25rem .25rem;
   text-align: center;
   text-decoration: none;
-  transition: background-color .5s ease;
-  width: auto;
+  transition: background-color .3s ease;
+  width: 150px;
 
   &:hover {
     background-color: $nav-green;
+    color: $black;
   }
 }
 
@@ -83,6 +84,7 @@
   margin-bottom: auto;
   margin-right: .5rem;
   margin-top: auto;
+  width: 100px;
 }
 
 .login-button {
@@ -101,18 +103,8 @@
   border-style: solid;
   border-width: 1px;
   height: 50px;
-  margin-right: 1rem;
   object-fit: cover;
   width: 50px;
-}
-
-.dropdown-icon {
-  color: $black;
-  font-size: 1.3rem;
-
-  &:hover {
-    color: $table-highlight-green;
-  }
 }
 
 .dropdown-menu {
