--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -33,7 +33,6 @@
 }
 
 .rbc-calendar {
-
   display: flex;
   margin-bottom: 1.875rem;
   width: 100%;
@@ -75,6 +74,7 @@
 .table {
   border-collapse: collapse;
   margin-bottom: 3rem;
+  margin-top: 3rem;
   width: 100%;
 
   td,
