LITTERPIC-257 - Added ambassador badge and text to users who are ambassadors on their profile and stories they have posted.

--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -8,10 +8,16 @@
 }
 
 .ambassador-icon {
-  font-size: 36px;
+  font-size: 24px;
   color: $litterpic-green;
   padding-right: .25rem;
   padding-bottom: .5rem;
+}
+
+.post-ambassador-icon {
+  font-size: 18px;
+  color: $litterpic-green;
+  padding-right: .5rem;
 }
 
 .error-clear-icon {
