--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -14,6 +14,15 @@
   padding-bottom: .5rem;
 }
 
+.ambassador-heading-icon {
+  align-items: flex-end;
+  font-size: 28px;
+  color: $litterpic-green;
+  display: flex;
+  margin-bottom: 0.4rem;
+  padding-left: .3rem;
+}
+
 .post-ambassador-icon {
   font-size: 18px;
   color: $litterpic-green;
