LITTERPIC-232 - Added donation image and detail

--- a/styles/dontate.scss
+++ b/styles/dontate.scss
@@ -20,7 +20,8 @@
 
 .donorbox-container {
   flex: 0 0 auto;
-  margin-top: 1.25rem;
+  margin-left: 3rem;
+  margin-top: 3rem;
 }
 
 .donate-image-container {
@@ -31,9 +32,43 @@
 
 .donorbox-widget {
   display: flex;
-  justify-content: left;
+  flex-direction: row;
+  justify-content: center;
   margin-bottom: 1.25rem;
 }
+
+.donate-use-image {
+  margin-left: 40px;
+}
+
+.donate-grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 190px);
+  gap: 35px;
+  margin-left: 80px;
+}
+
+.donate-grid-item {
+  text-align: center;
+}
+
+.donorbox-images-container {
+  display: none;
+}
+
+.donorbox-images-container-desktop {
+  display: flex;
+  height: 100px;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+//.donate-image-desktop {
+//  height: 150px;
+//  margin-left: 2rem;
+//  margin-right: 1rem;
+//  width: auto;
+//}
 
 @media (max-width: 76.5rem) {
   .donorbox-images-container-desktop {
@@ -55,6 +90,7 @@
 
   .donorbox-container {
     flex: 0 0 auto;
+    margin-left: 0;
     margin-top: 1.25rem;
   }
 
@@ -75,25 +111,8 @@
   .legal {
     margin-right: 2.5rem;
   }
-}
 
-
-@media (min-width: 76.5rem) {
-  .donorbox-images-container {
+  .donation-use {
     display: none;
-  }
-
-  .donorbox-images-container-desktop {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .donate-image-desktop {
-    height: 250px;
-    margin-left: 2rem;
-    margin-right: 1rem;
-    margin-top: 7rem;
-    width: auto;
   }
 }
