--- a/styles/home.scss
+++ b/styles/home.scss
@@ -149,7 +149,7 @@ p {
 .carousel-page {
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   height: 100%;
   left: 0;
   opacity: 0;
