--- a/styles/styles.css
+++ b/styles/styles.css
@@ -831,7 +831,7 @@ p .index-inspire-change-text {
 .carousel-page {
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   height: 100%;
   left: 0;
   opacity: 0;
@@ -2064,7 +2064,7 @@ p .index-inspire-change-text {
 .carousel-page {
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   height: 100%;
   left: 0;
   opacity: 0;
