--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2885,6 +2885,58 @@ h1.heading-text.profile-heading {
   margin-left: 2rem;
 }
 
+.like-list-container {
+  font-size: 9px;
+  left: 50%;
+  position: absolute;
+  text-align: start;
+  top: 98%;
+  transform: translateX(-75%);
+  z-index: 1;
+}
+
+.like-list {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #e5e5e4;
+}
+
+.like-user {
+  display: block;
+  margin-top: 0.5rem;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-photo {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.user-name {
+  flex-grow: 1;
+}
+
+.like-date {
+  margin-left: 10px;
+}
+
+.like-user.loading {
+  opacity: 0;
+}
+
+.like-user.loaded {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+
 .like-count,
 .comment-count {
   margin-left: 5px;
@@ -4323,6 +4375,58 @@ input::placeholder {
 }
 .likes-comments .likes-comments-comment-field {
   margin-left: 2rem;
+}
+
+.like-list-container {
+  font-size: 9px;
+  left: 50%;
+  position: absolute;
+  text-align: start;
+  top: 98%;
+  transform: translateX(-75%);
+  z-index: 1;
+}
+
+.like-list {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #e5e5e4;
+}
+
+.like-user {
+  display: block;
+  margin-top: 0.5rem;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-photo {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.user-name {
+  flex-grow: 1;
+}
+
+.like-date {
+  margin-left: 10px;
+}
+
+.like-user.loading {
+  opacity: 0;
+}
+
+.like-user.loaded {
+  opacity: 1;
+  transition: opacity 0.5s ease;
 }
 
 .like-count,
